--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.10.3",
-    "mongoose": "^6.5.4"
+    "fast-json-parser": "^1.0.4",
+    "fast-json-stringify": "^5.4.0",
+    "mongoose": "^6.5.4",
+    "redis": "^4.3.1"
   },
   "type": "module"
 }
