--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^13.10.3",
     "fast-json-parser": "^1.0.4",
     "fast-json-stringify": "^5.4.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.4",
     "redis": "^4.3.1"
   },
